# yakebackup

GAir/study/Docments/: PCB打样.md
GAir/study/devices_c/: 5110.c  bmp280.c  dht11.c  ds18b20.c  light.c
GAir/study/socket_gps_to_aliyun/: airgps_server2.c  linkapp.lua  main.lua  test.lua
TL_System/arch_design/debug/: README.md  debug.c  debug_cmd.c  debug_cmd.h  debug_cmdline_arch.c  debug_connection.c  debug_event.c  debug_event.h  monitor
TL_System/arch_design/docments/: arch.dia  client.dia  core.dia  env.docx  problem  setup.dia  software_update.dia  定位数据帧位说明-合同（段邹沟通）（161021）.docx  建议和补充说明.docx  自动检测定位数据广播协议.doc  车地通讯协议_V0401.doc  车地通讯协议_V0401_增加时间校验的附加说明.docx  车载项目_SDS.docx.doc  车载项目_SDS_20160622.doc
TL_System/arch_design/misc/: misc.c  misc_connection.c  misc_connection.h  misc_event.c  misc_event.h
TL_System/arch_design/pppd/: pppd.sh  wcdma-VT1916
TL_System/arch_design/remote_server/: virtual_remote_server_with_upload.c
TL_System/arch_design/test/: gps_option.txt  open_close.c  read  read.c  test  utf.txt  utf_read.c  write  write.c
TL_System/git./: config  index  packed-refs
TL_System/railway_trio/: Makefile  Makefile.env  config.txt
TL_System/railway_trio/client/: Makefile  client.c  client_cmd_queue.c  client_cmd_queue.h  client_config_parser.c  client_config_parser.h  client_connection.c  client_connection.h  client_task_queue.c  client_task_queue.h  md5.h  (+15 more)
TL_System/railway_trio_p/: Makefile
backup/: README.md
bshadow/board/: target.schedule.sh
cstock/digital_none/: clean.sh  core.cl  none_core.c  none_core.h
cstock/old_version/: idea  readme.txt  self_test.py  volume_price.py  vp_chose_stock.py  yake_utils.py
none/plans/digital_arch/: CMakeLists.txt  none_core.c  none_core.h
none/plans/planC/: CMakeLists.txt
none/plans/planC/core/: CMakeLists.txt  core_kernel.cl  none_cmd.c  none_config.h  none_core.c  none_input.c  none_input.h  none_matrix.h  none_output.c  user_algo.h  user_algo_level_1.c
none/plans/planC/docs/: target.level
none/study/: note
none/utils/: us_time_calc.c
robot_voice/sinvoice/: Android.mk  AndroidManifest.xml
sunup/: Android.mk  AndroidManifest.xml  README.md
trainer/ubuntu_voice/: CMakeLists.txt  fft.c  make.sh  none_cmd.c  pre_emphasis_and_hamming.c  test.c  wav.c
trainer/ubuntu_voice/include/: mel_filter.h  pre_emphasis_and_hamming.h  vad.h  wav.h
(+457 files in other folders)
