PROJECT(voice)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/include )

#LINK_DIRECTORIES( /home/chengyake/AMD/AMDAPPSDK-3.0/lib/x86_64/  ${PROJECT_SOURCE_DIR}/out/lib )



AUX_SOURCE_DIRECTORY(. DIR_SRCS)

#SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/out/bin)  
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR})  



ADD_EXECUTABLE(voice ${DIR_SRCS})

TARGET_LINK_LIBRARIES(voice libm.so)



